# academia-natacao

./: .env  README.md  docker-compose.yaml
swimming_gym/: Dockerfile  db.sqlite3  fly.toml  manage.py  pyproject.toml  requirements.txt  start-django
swimming_gym/alunos/: forms.py  models.py  urls.py  views.py
swimming_gym/alunos/templates/: adicionar_aluno.html  alunos.html
swimming_gym/api/: views.py
swimming_gym/base_static/js/: js.js
swimming_gym/base_templates/: add_course_template.html  add_staff_template.html  add_student_template.html  base_template.html  content_header.html  index.html  notification_template.html  sidebar_template.html
swimming_gym/empresas/: admin.py  models.py
swimming_gym/empresas/migrations/: 0001_initial.py
swimming_gym/fornecedores/: admin.py  forms.py  urls.py  views.py
swimming_gym/fornecedores/templates/: adicionar_fornecedor.html  fornecedores.html
swimming_gym/login/: urls.py  views.py
swimming_gym/login/templates/: login.html
swimming_gym/pagamentos/: forms.py  models.py  tables.py  urls.py  views.py
swimming_gym/pagamentos/templates/: adicionar_pagamento.html  pagamentos.html
swimming_gym/painel/: tables.py  urls.py  views.py
swimming_gym/painel/templates/: base_template.html  home.html
swimming_gym/recebimentos/: forms.py  tables.py  urls.py  views.py
swimming_gym/recebimentos/templates/: adicionar_recebimento.html  recebimentos.html
swimming_gym/student_management_app/: EmailBackEnd.py  hod_views.py  models.py  views.py
swimming_gym/swimming_gym/: asgi.py  settings.py  urls.py  wsgi.py
swimming_gym/usuarios/: forms.py  models.py  tables.py  urls.py  views.py
(+55 files in other folders)
