[tool.poetry]
name = "academia-natacao"
version = "0.1.0"
description = ""
authors = ["mateu <mateus.vidotti@idgeo.com.br>"]
readme = "README.md"
packages = [{include = "academia_natacao"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.13"
psycopg2-binary = "^2.9.9"
django-tables2 = "^2.7.0"
django-bootstrap-v5 = "^1.0.11"
gunicorn = "^22.0.0"
django-rest-framework = "^0.1.0"
asgiref = "^3.8.1"
django-cors-headers = "^4.5.0"
djangorestframework-simplejwt = "^5.3.1"
sqlparse = "^0.5.1"
pytz = "^2024.2"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
